# sigmaInterpreter

./: .gitignore  sigmaInterpreter.cabal
InterpreterLib/: Algebras.hs  Functors.hs  Sample.hs  Sample2.hs  Sample3.hs  Sigma.hs  SubType.hs
src/: Eval.hs  Main.hs  Model.hs  Modular.hs  MonadStack.hs  Parser.hs  Sigma.hs
