name:           sigmaInterpreter
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         zwarn

executable sigmaInterpreter
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl >=2.1.3 && <2.2,
                   containers >=0.5.5 && <0.6,
                   parsec >=3.1.5 && <3.2
  ghc-options:     -Wall

